@@ -1,8 +1,8 @@
 Package: neighbours
 Type: Package
 Title: Neighbourhood Functions for Local-Search Algorithms
-Version: 0.1-0
-Date: 2019-09-12
+Version: 0.2-0
+Date: 2019-09-20
 Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person(given = "Enrico", family = "Schumann",
                   role  = c("aut", "cre"),
