@@ -1,3 +1,8 @@
+2019-09-20  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/neighbourfun.R (neighbourfun): support
+	neighbourhoods without sum constraint
+
 2019-09-12  Enrico Schumann  <es@enricoschumann.net>
 
         * R/neighbourfun.R (neighbourfun): support
